@@ -11,6 +11,11 @@ tip (development version)
     (Re-added the Atom1 'published' property.)
     (The 'generator' and 'source' properties were lost, but they weren't
     working correctly anyway.)
+    GeoRSS usage: use the Geo\* classes and add  ``geometry=(lat, lon)`` to
+    each news item. Other shapes and a (not yet implemented) Geometry class are
+    allowed; see the source.
+    Note: you should specify the latitude first, but the longitude appears
+    first in the newsfeed.  This is a feature, to comply with the spec.
 * webhelpers.html:
   - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
   - The basic tag builders (``HTML.a()`` and ``HTML.tag("a")``) now have a
